test/expected/explain_ci-knr.out
explain const int x
        ^
9: error: "const": unsupported keyword until C89; did you mean "__const"?
